Make footer tagline not bold, ensure funding button text doesn't get cut off

--- a/source/assets/stylus/_footer.styl
+++ b/source/assets/stylus/_footer.styl
@@ -5,8 +5,8 @@
 	
 	.tagline
 		color black-eighty
-		font-size 20px
-		font-weight bold
+		font-size 20.5px
+		font-weight normal
 		line-height OneLineHeight
 		text-align center
 	
